--- a/index.html
+++ b/index.html
@@ -8,22 +8,9 @@
 <link rel="stylesheet" type="text/css" href="mystyles.css">
 <body onload="carousel()">
 	
-	
+	<div class="container">
 		<header>Bianca's Portfolio</header>
-	</div>
-	<div class="w3-content w3-section">
-	  <img class="mySlides" src="pugdon.jpg">
-	  <img class="mySlides" src="pugdon2.jpg">
-	  <img class="mySlides" src="screenshot.jpg">
-	</div>
 	
-	
-	
-	<article>
-		<h2>About Me</h2>
-		<p>I'm bianca and I love coding.</p>
-		
-		
 	
 		<nav class="nav">
 			<h3> My GWC Summer Projects: </h3>
@@ -35,8 +22,20 @@
 					<li><a href="#"> City Scroller</a> </li>
 				</ul>
 		</nav>
+	
+	
+	<article>
+		<h2>About Me</h2>
+		<p>I'm bianca and I love coding. <br> Pugs are cool too, especially when they're eating donuts.</p>
+		<div class="w3-content w3-section">
+		  <img class="mySlides" src="pugdon.jpg">
+		  <img class="mySlides" src="pugdon2.jpg">
+		  <img class="mySlides" src="pugdon3.jpg">
+		  <img class="mySlides" src="pugdon4.jpg">
+		  <img class="mySlides" src="pugdon6.jpg">
+		</div>
+		
 	</article>
-	<div class ="container">
 	
 	<footer>@Bianca Productions 2018</footer>
 	
